<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="50dp">

    <TextView
        android:id="@+id/tvRegistroAl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_nota"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/edSelAl"
        android:hint="@string/selecciona_el_alumno"

        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSlectAl"
        app:layout_constraintTop_toBottomOf="@+id/btnVolverRegistroNota"

        android:layout_marginTop="20dp"
        android:enabled="false"
        />

    <Button
        android:id="@+id/btnSlectAl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="seletAlum"

        android:text="@string/selecciona_nel_alumno"
        app:layout_constraintBottom_toBottomOf="@+id/edSelAl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnSelAss"

        app:layout_constraintTop_toTopOf="@+id/edSelAl"

        />

    <EditText
        android:id="@+id/edSelAss"
        android:layout_width="0dp"
        android:layout_height="48dp"

        android:hint="@string/selecciona_la_asignatura"
        app:layout_constraintEnd_toStartOf="@id/btnSelAss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSelAl"

        android:layout_marginTop="20dp"
        android:enabled="false"
        />

    <Button
        android:id="@+id/btnSelAss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="seletAss"

        android:text="@string/seleccionar_nasignatura"
        app:layout_constraintBottom_toBottomOf="@+id/edSelAss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edSelAss" />

    <EditText
        android:id="@+id/edNotaExam"
        android:layout_width="0dp"
        android:layout_height="48dp"

        android:hint="@string/nota_examen"
        app:layout_constraintEnd_toStartOf="@id/edNotaActividades"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSelAss"

        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/edNotaActividades"
        android:hint="@string/nota_de_actividades"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        app:layout_constraintBottom_toBottomOf="@+id/edNotaExam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edNotaExam"
        app:layout_constraintTop_toTopOf="@+id/edNotaExam"

        android:layout_marginStart="20dp"
        android:inputType="numberDecimal"
        />

    <Button
        android:id="@+id/btnCalNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="calcularNota"
        android:text="@string/calcular_nnota"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNotaExam" />

    <EditText
        android:id="@+id/edVacio"
        android:layout_width="0dp"
        android:layout_height="48dp"

        app:layout_constraintBottom_toBottomOf="@+id/btnCalNot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCalNot"
        app:layout_constraintTop_toTopOf="@+id/btnCalNot"
        android:enabled="false"

        />

    <Button
        android:id="@+id/btnSaveDta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="guardarDta"

        android:text="@string/guardar_ndatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnClearDta"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnClearDta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/colorPrimary"

        android:onClick="limpiarDta"
        android:text="@string/limpiar_ndatos"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSaveDta" />

    <Button
        android:id="@+id/btnVolverRegistroNota"
        android:padding="0dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/volver"
        android:onClick="volverPantallaInicio"
        android:backgroundTint="@color/colorPrimary"
        tools:layout_editor_absoluteY="2dp" />
    

</androidx.constraintlayout.widget.ConstraintLayout>